Major upgrade to include simulations of incomplete watersheds with streamflow boundary conditions